--- a/playgrounds/ant-design-pro/package.json
+++ b/playgrounds/ant-design-pro/package.json
@@ -45,7 +45,8 @@
     "rc-util": "^5.38.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-fittext": "^1.0.0"
+    "react-fittext": "^1.0.0",
+    "react-error-overlay": "6.0.9"
   },
   "devDependencies": {
     "@ant-design/pro-cli": "^2.1.5",
